add timeout (#714)
* add timeout

add timeout

* Update integration_test.groovy

change MaxPermSize to MaxMetaspaceSize

* fix timeout

* Update integration_test.groovy